program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -3235,7 +3235,7 @@ msgstr "Un único bloque Matroska contiene un fotograma completo (para el conten
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:589
 #, no-c-format
 msgid "A subtitle track is considered to be 'forced' track if any of the following conditions are met:"
-msgstr ""
+msgstr "Se considera que una pista de subtítulos es una pista \"forzada\" si se cumple alguna de las siguientes condiciones:"
 
 #: src/merge/generic_reader.cpp:177
 #, no-c-format, c++-format
@@ -3893,7 +3893,7 @@ msgstr "Habilitar el copiado para todas las pistas de los siguientes tipos, sin 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2291
 #, no-c-format
 msgid "Always enable copying of &forced subtitle tracks"
-msgstr ""
+msgstr "Activar siempre la copia de pistas de subtítulos &forzadas"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:258
 #, no-c-format
@@ -4379,7 +4379,7 @@ msgstr "Boleano (sí/no, on/off, etc.)"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
 msgid "Both of the schemes used by older models (e.g. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) & by current ones (e.g. GH019876.mp4, GH029876.mp4, GH039876.mp4…) are supported."
-msgstr ""
+msgstr "Se admiten tanto los esquemas utilizados por los modelos antiguos (por ejemplo, GOPR1234.mp4, GP011234.mp4, GP021234.mp4...) como por los actuales (por ejemplo, GH019876.mp4, GH029876.mp4, GH039876.mp4...)."
 
 #: src/merge/generic_packetizer.cpp:206
 #, no-c-format
@@ -5852,9 +5852,9 @@ msgid "Derive &end timestamps from start timestamps"
 msgstr "Generar códigos de tiempo final&es a partir de las iniciales"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:592
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Deriving the 'forced display' flag from file names is active & the file name matches the corresponding pattern."
-msgstr "La interfaz gráfica de usuario puede activar la opción \"visualización forzada\" para estas pistas si el nombre del archivo coincide con esta expresión regular."
+msgstr "Si está activa la derivación, a partir de los nombres de archivo, del marcador 'visualización forzada' y el nombre de archivo coincide con el patrón correspondiente."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:265
 #, no-c-format
@@ -7585,9 +7585,9 @@ msgid "If enabled, files and tracks will be sorted by track types when they're a
 msgstr "Si está habilitado, los archivos y pistas serán ordenados por tipos de pista cuando se añadan a los ajustes de multiplexado."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:588
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If enabled, forced subtitle tracks will always be set to be copied."
-msgstr "Si está habilitado, esos archivos serán omitidos sin preguntar."
+msgstr "Si se activa, las pistas de subtítulos forzados siempre se establecerán para ser copiadas."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:401
 #, no-c-format
@@ -8398,7 +8398,7 @@ msgstr "Intenta detectar secuencias de nombres que probablemente pertenezcan a l
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:590
 #, no-c-format
 msgid "Its 'forced display' property is set in the source file."
-msgstr ""
+msgstr "Su propiedad \"visualización forzada\" se establece en el archivo origen."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:2247
 #, no-c-format
@@ -8408,7 +8408,7 @@ msgstr "Su lugar de instalación no se pudo determinar automáticamente."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:591
 #, no-c-format
 msgid "Its name contains the word 'forced' (in English)."
-msgstr ""
+msgstr "Su nombre contiene la palabra \"forzado\" (en inglés)."
 
 #: src/common/command_line.cpp:61
 #: src/common/command_line.cpp:65
@@ -13140,7 +13140,7 @@ msgstr "El formato es de la forma 'HH:MM:SS.nnnnnnnnn' o como un número de segu
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:424
 #, no-c-format
 msgid "The format used by GoPro cameras for chaptered video files is recognized as well."
-msgstr ""
+msgstr "También se reconoce el formato utilizado por las cámaras GoPro para los archivos de vídeo por capítulos."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:294
 #, no-c-format
