program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -4301,7 +4301,7 @@ msgstr "Valeur booléenne (oui/non, marche/arrêt, etc.)"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
 msgid "Both of the schemes used by older models (e.g. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) & by current ones (e.g. GH019876.mp4, GH029876.mp4, GH039876.mp4…) are supported."
-msgstr ""
+msgstr "Le format utilisé par les anciens modèles (par ex. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) et celui utilisé par les nouveaux modèles (par ex. GH019876.mp4, GH029876.mp4, GH039876.mp4…) sont tous les deux pris en charge."
 
 #: src/merge/generic_packetizer.cpp:206
 #, no-c-format
@@ -13065,7 +13065,7 @@ msgstr "Le format est soit de type « HH:MM:SS.nnnnnnnnn », soit un nombre suiv
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:424
 #, no-c-format
 msgid "The format used by GoPro cameras for chaptered video files is recognized as well."
-msgstr ""
+msgstr "Le format utilisé par les caméras GoPro pour les fichiers vidéo chapitrés est également reconnu."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:294
 #, no-c-format
