program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -4310,7 +4310,7 @@ msgstr "Booleano (sì/no, on/off, ecc.)"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
 msgid "Both of the schemes used by older models (e.g. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) & by current ones (e.g. GH019876.mp4, GH029876.mp4, GH039876.mp4…) are supported."
-msgstr ""
+msgstr "Sono supportati entrambi gli schemi usati dai modelli precedenti (ad esempio GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) e da quelli attuali (ad esempio GH019876.mp4, GH029876.mp4, GH039876.mp4…)."
 
 #: src/merge/generic_packetizer.cpp:206
 #, no-c-format
@@ -13082,7 +13082,7 @@ msgstr "Il formato può essere nella forma 'OO:MM:SS.nnnnnnnnn o come numero seg
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:424
 #, no-c-format
 msgid "The format used by GoPro cameras for chaptered video files is recognized as well."
-msgstr ""
+msgstr "Viene riconosciuto anche il formato usato dalle fotocamere GoPro per i file video suddivisi in capitoli."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:294
 #, no-c-format
