--- a/po/tr.po
+++ b/po/tr.po
@@ -13017,7 +13017,7 @@ msgstr "Biçim ya 'HH:MM:SS.nnnnnnnnn' biçimindedir ya da 's', 'ms' veya 'us' b
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:424
 #, no-c-format
 msgid "The format used by GoPro cameras for chaptered video files is recognized as well."
-msgstr ""
+msgstr "Bölümlere ayrılmış görüntü dosyaları için GoPro kameraları tarafından kullanılan biçim de tanınır."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:294
 #, no-c-format
