--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-11-04 16:50+0100\n"
-"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"PO-Revision-Date: 2023-11-11 17:18+0100\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2023\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -1815,7 +1815,7 @@ msgstr "&Chiudi file"
 #: src/mkvtoolnix-gui/merge/tool.cpp:391
 #, no-c-format
 msgid "&Close settings"
-msgstr "Impostazioni &chiusura"
+msgstr "&Chiusura impostazioni"
 
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:228
 #, no-c-format
