program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -4348,7 +4348,7 @@ msgstr "Booleà (sí/no, actiu/inactiu, etc.)"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
 msgid "Both of the schemes used by older models (e.g. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) & by current ones (e.g. GH019876.mp4, GH029876.mp4, GH039876.mp4…) are supported."
-msgstr ""
+msgstr "Els dos esquemes emprats pels models antics (p. ex., GOPR1234.mp4, GP011234.mp4, GP021234.mp4...) i els actuals (p. ex., GH019876.mp4, GH029876.mp4, GH039876.mp4, GH039876.mp4...) són compatibles."
 
 #: src/merge/generic_packetizer.cpp:206
 #, no-c-format
@@ -13095,7 +13095,7 @@ msgstr "El format segueix la forma HH:MM:SS.nnnnnnnnn o com un número seguit pe
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:424
 #, no-c-format
 msgid "The format used by GoPro cameras for chaptered video files is recognized as well."
-msgstr ""
+msgstr "També es reconeix el format emprat per les càmeres GoPro per als fitxers de vídeo amb capítols."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:294
 #, no-c-format
