program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -8052,7 +8052,7 @@ msgstr "Не отображается"
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:185
 #, no-c-format
 msgid "It cannot be removed because it is a mandatory header field."
-msgstr "Невозможно удалить, потому что является обязательным полем заголовка."
+msgstr "Его нельзя удалить, потому что он является обязательным полем заголовка."
 
 #: src/merge/mkvmerge.cpp:1047
 #, no-c-format
