--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (81.0-0~bunkus01) mantic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sat, 02 Dec 2023 11:54:59 +0100
+
 mkvtoolnix (80.0-0~bunkus01) mantic; urgency=low
 
   * New version.
