--- a/doc/man/po4a/po/ko.po
+++ b/doc/man/po4a/po/ko.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2023-10-29 22:06+0100\n"
+"POT-Creation-Date: 2023-12-02 11:55+0100\n"
 "PO-Revision-Date: 2022-07-07 18:33+0200\n"
 "Last-Translator: 양성욱, 2022\n"
 "Language-Team: Korean (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ko/)\n"
@@ -29,7 +29,7 @@ msgstr "mkvextract"
 #: doc/man/mkvtoolnix-gui.xml:6
 #, fuzzy
 #| msgid "34.0.0"
-msgid "80.0"
+msgid "81.0"
 msgstr "34.0.0"
 
 #. type: Content of the date entity
@@ -38,8 +38,10 @@ msgstr "34.0.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-10-29"
-msgstr ""
+#, fuzzy
+#| msgid "2021-12-27"
+msgid "2023-12-02"
+msgstr "2017-12-17"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5778,10 +5780,6 @@ msgstr ")"
 
 #~ msgid "The segment info XML files"
 #~ msgstr "세그먼트 정보 XML 파일"
-
-#~| msgid "2017-12-17"
-#~ msgid "2021-12-27"
-#~ msgstr "2017-12-17"
 
 #~| msgid "2019-08-24"
 #~ msgid "2020-09-06"
