--- a/doc/man/po4a/po/uk.po
+++ b/doc/man/po4a/po/uk.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: 4.4.0\n"
-"POT-Creation-Date: 2023-10-29 22:06+0100\n"
+"POT-Creation-Date: 2023-12-02 11:55+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: Vlad Anisimov <uniss@ua.fm>, 2020,2022\n"
 "Language-Team: Ukrainian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/uk/)\n"
@@ -25,8 +25,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "80.0"
-msgstr "80.0"
+msgid "81.0"
+msgstr "81.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -34,8 +34,10 @@ msgstr "80.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2023-10-29"
-msgstr ""
+#, fuzzy
+#| msgid "2021-12-27"
+msgid "2023-12-02"
+msgstr "2021-12-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -5774,9 +5776,6 @@ msgstr ")"
 
 #~ msgid "The segment info XML files"
 #~ msgstr "Файли інформації сегмента XML"
-
-#~ msgid "2021-12-27"
-#~ msgstr "2021-12-27"
 
 #~ msgid "<option>--forced-track</option> <parameter>TID<optional>:bool</optional></parameter>"
 #~ msgstr "<option>--forced-track</option> <parameter>TID<optional>:bool</optional></parameter>"
