program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -7607,7 +7607,7 @@ msgstr "Si está habilitado, esos archivos serán omitidos sin preguntar."
 #: src/common/hacks.cpp:70
 #, no-c-format
 msgid "If enabled, the BlockAddID element will be written even if it's set to its default value of 1."
-msgstr ""
+msgstr "Si está activada, el elemento BlockAddID se escribirá aunque tenga el valor predeterminado igual a 1."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:331
 #, no-c-format
@@ -11433,7 +11433,7 @@ msgstr "Establecer si esta pista (audio, video o subtítulos) DEBE utilizarse si
 #: src/common/property_element.cpp:154
 #, no-c-format
 msgid "Set if the BlockAdditional element with BlockAddID of '1' contains alpha channel data."
-msgstr ""
+msgstr "Establece si el elemento BlockAdditional con BlockAddID igual a '1' contiene datos de canal alfa."
 
 #: src/common/property_element.cpp:138
 #, no-c-format
@@ -15066,9 +15066,9 @@ msgstr "Video"
 
 #: src/common/kax_element_names.cpp:165
 #: src/common/property_element.cpp:154
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video alpha mode"
-msgstr "Modo estéreo del vídeo"
+msgstr "Modo alfa del vídeo"
 
 #: src/common/property_element.cpp:165
 #, no-c-format
