program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -7529,7 +7529,7 @@ msgstr "Si activé, de tels fichiers seront toujours ignorés sans confirmation.
 #: src/common/hacks.cpp:70
 #, no-c-format
 msgid "If enabled, the BlockAddID element will be written even if it's set to its default value of 1."
-msgstr ""
+msgstr "Si activé, l'élément BlockAddID sera écrit même s'il est défini à sa valeur par défaut de 1."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:331
 #, no-c-format
@@ -11352,7 +11352,7 @@ msgstr "Est défini si la piste (audio, vidéo ou sous-titres) DEVRAIT être uti
 #: src/common/property_element.cpp:154
 #, no-c-format
 msgid "Set if the BlockAdditional element with BlockAddID of '1' contains alpha channel data."
-msgstr ""
+msgstr "Définit si l'élément BlockAdditional avec BlockAddID à « 1 » contient des données sur la couche alpha."
 
 #: src/common/property_element.cpp:138
 #, no-c-format
@@ -14991,9 +14991,9 @@ msgstr "Vidéo"
 
 #: src/common/kax_element_names.cpp:165
 #: src/common/property_element.cpp:154
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video alpha mode"
-msgstr "Mode stéréo vidéo"
+msgstr "Mode alpha vidéo"
 
 #: src/common/property_element.cpp:165
 #, no-c-format
