program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-12-06 22:40+0100\n"
-"PO-Revision-Date: 2023-11-11 17:18+0100\n"
+"PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2023\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/it/)\n"
@@ -1815,7 +1815,7 @@ msgstr "&Chiudi file"
 #: src/mkvtoolnix-gui/merge/tool.cpp:391
 #, no-c-format
 msgid "&Close settings"
-msgstr "&Chiusura impostazioni"
+msgstr "&Chiudi impostazioni"
 
 #: src/mkvtoolnix-gui/forms/info/element_viewer_dialog.h:228
 #, no-c-format
@@ -7543,7 +7543,7 @@ msgstr "Se abilitata, tali file verranno sempre ignorati senza chiedere."
 #: src/common/hacks.cpp:70
 #, no-c-format
 msgid "If enabled, the BlockAddID element will be written even if it's set to its default value of 1."
-msgstr ""
+msgstr "Se abilitata, l'elemento BlockAddID verrà scritto anche se è impostato al valore predefinito 1."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:331
 #, no-c-format
@@ -11371,7 +11371,7 @@ msgstr "Imposta se quella traccia (audio, video o sottotitoli) DOVREBBE essere u
 #: src/common/property_element.cpp:154
 #, no-c-format
 msgid "Set if the BlockAdditional element with BlockAddID of '1' contains alpha channel data."
-msgstr ""
+msgstr "Imposta se l'elemento BlockAdditional con BlockAddID pari a '1' contiene dati del canale alfa."
 
 #: src/common/property_element.cpp:138
 #, no-c-format
@@ -15020,9 +15020,9 @@ msgstr "Video"
 
 #: src/common/kax_element_names.cpp:165
 #: src/common/property_element.cpp:154
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video alpha mode"
-msgstr "Modo video stereo"
+msgstr "Modalità video alfa"
 
 #: src/common/property_element.cpp:165
 #, no-c-format
