program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-12-06 22:40+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2023\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2019-2023\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -7284,7 +7284,7 @@ msgstr "Если включено, такие файлы всегда будут
 #: src/common/hacks.cpp:70
 #, no-c-format
 msgid "If enabled, the BlockAddID element will be written even if it's set to its default value of 1."
-msgstr ""
+msgstr "Если включено, то элемент BlockAddID будет записан, даже если его значение по умолчанию равно 1."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:331
 #, no-c-format
@@ -11118,7 +11118,7 @@ msgstr "Установить, если эта дорожка (аудио, вид
 #: src/common/property_element.cpp:154
 #, no-c-format
 msgid "Set if the BlockAdditional element with BlockAddID of '1' contains alpha channel data."
-msgstr ""
+msgstr "Включить, если элемент BlockAdditional с идентификатором BlockAddID \"1\" содержит данные альфа-канала."
 
 #: src/common/property_element.cpp:138
 #, no-c-format
@@ -14756,9 +14756,9 @@ msgstr "Видео"
 
 #: src/common/kax_element_names.cpp:165
 #: src/common/property_element.cpp:154
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video alpha mode"
-msgstr "Режим стереоизображения"
+msgstr "Режим прозрачности видео"
 
 #: src/common/property_element.cpp:165
 #, no-c-format
