program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -4276,7 +4276,7 @@ msgstr "Boolean (evet/hayır, açık/kapalı vb.)"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:425
 #, no-c-format
 msgid "Both of the schemes used by older models (e.g. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) & by current ones (e.g. GH019876.mp4, GH029876.mp4, GH039876.mp4…) are supported."
-msgstr ""
+msgstr "Eski modeller (örn. GOPR1234.mp4, GP011234.mp4, GP021234.mp4…) ve şu anki modeller (örn. GH019876.mp4, GH029876.mp4, GH039876.mp4…) tarafından kullanılan şemaların her ikisi de desteklenir."
 
 #: src/merge/generic_packetizer.cpp:206
 #, no-c-format
@@ -7502,7 +7502,7 @@ msgstr "Eğer etkinleştirildiyse, bu tür dosyalar her zaman sorulmadan atlanac
 #: src/common/hacks.cpp:70
 #, no-c-format
 msgid "If enabled, the BlockAddID element will be written even if it's set to its default value of 1."
-msgstr ""
+msgstr "Eğer etkinleştirildiyse, BlockAddID öğesi, varsayılan değeri 1'e ayarlanmış olsa bile yazılacaktır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:331
 #, no-c-format
@@ -11314,7 +11314,7 @@ msgstr "Eğer, kullanıcı tercihiyle eşleşen dil bulunamadığında bu iz (se
 #: src/common/property_element.cpp:154
 #, no-c-format
 msgid "Set if the BlockAdditional element with BlockAddID of '1' contains alpha channel data."
-msgstr ""
+msgstr "BlockAddIDID'si '1' olan BlockAdditional öğesinin alfa kanalı verileri içerip içermediğini ayarlayın."
 
 #: src/common/property_element.cpp:138
 #, no-c-format
@@ -14941,9 +14941,9 @@ msgstr "Görüntü"
 
 #: src/common/kax_element_names.cpp:165
 #: src/common/property_element.cpp:154
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video alpha mode"
-msgstr "Görüntü stereo kipi"
+msgstr "Görüntü alfa kipi"
 
 #: src/common/property_element.cpp:165
 #, no-c-format
