program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-12-09 18:32+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: overdrive80 <lukillas.ole@gmail.com>, 2016-2023\n"
+"Last-Translator: Casper, 2023\n"
 "Language-Team: Spanish (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/es/)\n"
 "Language: es\n"
@@ -4135,9 +4135,9 @@ msgid "Audio"
 msgstr "Audio"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'cc' or 'sdh' in their file name to signal that they're intended for hearing impaired people."
-msgstr "A menudo, los archivos de subtítulos contienen en su nombre la palabra \"forzados\" para indicar que únicamente son empleados para la \"visualización forzada\" (por ejemplo, cuando hablan élfico en \"El Señor de los Anillos\")."
+msgstr "Los archivos de audio y subtítulos suelen contener las palabras \"cc\" o \"sdh\" en su nombre para indicar que están destinados a personas con discapacidad auditiva."
 
 #: src/common/property_element.cpp:215
 #, no-c-format
@@ -5847,9 +5847,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Dependiendo de esta configuración, el idioma puede ser generado a partir del nombre del archivo si el idioma en el archivo de origen es 'Indeterminado' ('und')."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2287
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
-msgstr "Deducir el in&dicador de \"visualización forzada\" de los subtítulos a partir de los nombres de archivo:"
+msgstr "Derive el indicador \"Personas con Discapacidad Auditiva\" para audio/subtítulos a partir de nombres de archivos:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2286
 #, no-c-format
@@ -12278,9 +12278,9 @@ msgid "The GUI can set the 'forced display' flag for such tracks if the file nam
 msgstr "La interfaz gráfica de usuario puede activar la opción \"visualización forzada\" para estas pistas si el nombre del archivo coincide con esta expresión regular."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:523
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file name matches this regular expression."
-msgstr "La interfaz gráfica de usuario puede activar la opción \"visualización forzada\" para estas pistas si el nombre del archivo coincide con esta expresión regular."
+msgstr "La Interfaz Gráfica de Usuario puede establecer el indicador de \"discapacidad auditiva\" para dichas pistas si el nombre del archivo coincide con esta expresión regular."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13918,9 +13918,9 @@ msgid "The value for deriving the 'forced display' flag for subtitles from file 
 msgstr "El valor para deducir el indicador de \"visualización forzada\" de los subtítulos, a partir de los nombres de archivo, debe ser una expresión regular válida."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'hearing impaired' flag from file names must be a valid regular expression."
-msgstr "El valor para deducir el indicador de \"visualización forzada\" de los subtítulos, a partir de los nombres de archivo, debe ser una expresión regular válida."
+msgstr "El valor para derivar el indicador de \"discapacidad auditiva\" a partir de nombres de archivos debe ser una expresión regular válida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
