program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -4057,9 +4057,9 @@ msgid "Audio"
 msgstr "Audio"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'cc' or 'sdh' in their file name to signal that they're intended for hearing impaired people."
-msgstr "Les fichiers de sous-titres contiennent souvent le mot « forcé » dans leur nom de fichier pour indiquer qu'ils sont seulement destinés à un « affichage forcé » (par ex. quand ils parlent en Elfish dans « Le seigneur des anneaux »)."
+msgstr "Les noms de fichiers contiennent souvent les chaînes « cc » ou « sdh » pour indiquer qu'ils sont destinés aux personnes malentendantes."
 
 #: src/common/property_element.cpp:215
 #, no-c-format
@@ -5769,14 +5769,14 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Suivant ce paramètre, la langue peut aussi être déduite du nom de fichier si la langue du fichier source est « undetermined » (« und »)."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2287
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
-msgstr "Dériver l'indicateur « affichage forcé » pour les sous-titres de noms de fichiers :"
+msgstr "Dériver l'indicateur « &malentendant » pour l'audio/les sous-titres depuis les noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2286
 #, no-c-format
 msgid "Derive \"forced display\" fla&g for subtitles from file names:"
-msgstr "Dériver l'indicateur « affichage forcé » pour les sous-titres de noms de fichiers :"
+msgstr "Dériver l'indicateur « affichage forcé » pour les sous-titres depuis les noms de fichiers :"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/mass_modification_dialog.h:211
 #, no-c-format
@@ -12197,9 +12197,9 @@ msgid "The GUI can set the 'forced display' flag for such tracks if the file nam
 msgstr "L'interface du programme peut définir l'indicateur « affichage forcé » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:523
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file name matches this regular expression."
-msgstr "L'interface du programme peut définir l'indicateur « affichage forcé » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
+msgstr "L'interface du programme peut définir l'indicateur « malentendant » pour de telles pistes si le nom de fichier correspond à cette expression régulière."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13840,12 +13840,12 @@ msgstr "La valeur ne respecte pas la structure générale des balises de langues
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1538
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr "La valeur pour dériver l'indicateur « affichage forcé » pour les sous-titres de noms de fichiers doit être une expression régulière valide."
+msgstr "La valeur pour dériver l'indicateur « affichage forcé » pour les sous-titres depuis les noms de fichiers doit être une expression régulière valide."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'hearing impaired' flag from file names must be a valid regular expression."
-msgstr "La valeur pour dériver l'indicateur « affichage forcé » pour les sous-titres de noms de fichiers doit être une expression régulière valide."
+msgstr "La valeur pour dériver l'indicateur « malentendant » depuis les noms de fichiers doit être une expression régulière valide."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
