--- a/po/it.po
+++ b/po/it.po
@@ -4066,9 +4066,9 @@ msgid "Audio"
 msgstr "Audio"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'cc' or 'sdh' in their file name to signal that they're intended for hearing impaired people."
-msgstr "I file dei sottotitoli spesso contengono la parola \"forzato\" nel nome del file per segnalare che sono destinati solo alla \"visualizzazione forzata\" (ad esempio quando parlano Elfish in \"Il Signore degli Anelli\")."
+msgstr "I file audio e i sottotitoli spesso contengono le parole \"cc\" o \"sdh\" nel nome del file per segnalare che sono destinati a persone con problemi di udito."
 
 #: src/common/property_element.cpp:215
 #, no-c-format
@@ -5780,9 +5780,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "In modo dipendente da questa impostazione sottostante la lingua può anche derivare dal nome file se la lingua nella sorgente è 'indeterminata' ('und')."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2287
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
-msgstr "Deriva il flag \"visualizzazione forzata\" per i sottotitoli dai nomi dei file:"
+msgstr "Deriva il flag \"&problemi uditivi\" per audio/sottotitoli dai nomi dei file:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2286
 #, no-c-format
@@ -12220,9 +12220,9 @@ msgid "The GUI can set the 'forced display' flag for such tracks if the file nam
 msgstr "Se il nome del file corrisponde a questa espressione regolare la GUI può impostare il flag di \"visualizzazione forzata\" per tali tracce."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:523
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file name matches this regular expression."
-msgstr "Se il nome del file corrisponde a questa espressione regolare la GUI può impostare il flag di \"visualizzazione forzata\" per tali tracce."
+msgstr "La GUI può impostare il flag 'non udenti' per tali tracce se il nome del file corrisponde a questa espressione regolare."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13867,9 +13867,9 @@ msgid "The value for deriving the 'forced display' flag for subtitles from file 
 msgstr "Il valore per derivare il flag di \"visualizzazione forzata\" per i sottotitoli dai nomi dei file deve essere un'espressione regolare valida."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'hearing impaired' flag from file names must be a valid regular expression."
-msgstr "Il valore per derivare il flag di \"visualizzazione forzata\" per i sottotitoli dai nomi dei file deve essere un'espressione regolare valida."
+msgstr "Il valore per derivare il flag 'non udenti' dai nomi dei file deve essere un'espressione regolare valida."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
