--- a/po/ru.po
+++ b/po/ru.po
@@ -3808,9 +3808,9 @@ msgid "Audio"
 msgstr "Аудио"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'cc' or 'sdh' in their file name to signal that they're intended for hearing impaired people."
-msgstr "Имена файлов субтитров часто содержат слово \"forced\", означающее, что они предназначены только для \"принудительного показа\" (например, когда во \"Властелине колец\" говорят на эльфийском языке)."
+msgstr "Файлы аудио и субтитров часто содержат слова \"cc\" или \"sdh\" в имени, чтобы показать предназначение для людей с нарушениями слуха."
 
 #: src/common/property_element.cpp:215
 #, no-c-format
@@ -5523,9 +5523,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "В зависимости от этого параметра язык также может быть получен из имени файла, если язык в исходном файле \"неидентифицированный\" (\"und\")."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2287
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
-msgstr "&Выбирать флаг субтитров \"принудительный показ\" из имён файлов:"
+msgstr "Извлекать флаг \"&hearing impair\" для аудио/субтитров из имён файлов:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2286
 #, no-c-format
@@ -11966,9 +11966,9 @@ msgid "The GUI can set the 'forced display' flag for such tracks if the file nam
 msgstr "Графическая оболочка может установить флаг \"принудительный показ\" для подобных дорожек, если имя файла соответствует этому регулярному выражению."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:523
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file name matches this regular expression."
-msgstr "Графическая оболочка может установить флаг \"принудительный показ\" для подобных дорожек, если имя файла соответствует этому регулярному выражению."
+msgstr "Графический интерфейс может установить флаг \"hearing impaired\" для таких дорожек, если имя файла соответствует этому регулярному выражению."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13607,9 +13607,9 @@ msgid "The value for deriving the 'forced display' flag for subtitles from file 
 msgstr "Значение для извлечения флага субтитров \"принудительный показ\" из имён файлов должно быть действительным регулярным выражением."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'hearing impaired' flag from file names must be a valid regular expression."
-msgstr "Значение для извлечения флага субтитров \"принудительный показ\" из имён файлов должно быть действительным регулярным выражением."
+msgstr "Значение для извлечения флага \"hearing impaired\" из имён файлов должно быть верным регулярным выражением."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
