program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -7080,7 +7080,7 @@ msgstr "Une trame B a été trouvée sans deuxième référence dans un groupe d
 #: src/common/bcp47.cpp:538
 #, no-c-format
 msgid "Four-letter language codes are reserved for future use and not supported."
-msgstr "Les codes de langues à quatre lettres sont réservés à un usage futur et ne sont pas gérés."
+msgstr "Les codes de langues à quatre lettres sont réservés à un usage futur et ne sont pas pris en charge."
 
 #: src/merge/mkvmerge.cpp:1497
 #, no-c-format, c++-format
