program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -2079,7 +2079,7 @@ msgstr "&Ocultes"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2342
 #, no-c-format
 msgid "&Ignore playlists meant for menus"
-msgstr ""
+msgstr "&Ignora les llistes de reproducció destinades als menús"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
 #, no-c-format
@@ -7876,7 +7876,7 @@ msgstr "Si els voleu annexar o afegir com a parts addicionals, haureu de selecci
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:551
 #, no-c-format
 msgid "Ignores playlists which are likely meant for menus."
-msgstr ""
+msgstr "Ignora les llistes de reproducció que probablement estan destinades als menús."
 
 #: src/output/p_textsubs.cpp:152
 #, no-c-format, c++-format
@@ -14138,7 +14138,7 @@ msgstr "Aquest és un nom arbitrari, la IGU podrà emprar-lo per a referir-se a 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:552
 #, no-c-format
 msgid "This is considered to be the case when a playlist contains the same item at least five times."
-msgstr ""
+msgstr "Es considera que és el cas quan una llista de reproducció conté el mateix element almenys cinc vegades."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:306
 #, no-c-format
