program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -2105,7 +2105,7 @@ msgstr "&Oculto"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2342
 #, no-c-format
 msgid "&Ignore playlists meant for menus"
-msgstr ""
+msgstr "&Ignorar listas de reproducción destinadas a menús"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
 #, no-c-format
@@ -7906,7 +7906,7 @@ msgstr "Seleccionar a qué archivo de entrada necesitas unírselos o agregársel
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:551
 #, no-c-format
 msgid "Ignores playlists which are likely meant for menus."
-msgstr ""
+msgstr "Ignora las listas de reproducción que probablemente estén destinadas a menús."
 
 #: src/output/p_textsubs.cpp:152
 #, no-c-format, c++-format
@@ -14184,7 +14184,7 @@ msgstr "Este es un nombre arbitrario que la GUI puede usar para referirse a esta
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:552
 #, no-c-format
 msgid "This is considered to be the case when a playlist contains the same item at least five times."
-msgstr ""
+msgstr "Se considera que este es el caso cuando una lista de reproducción contiene el mismo elemento al menos cinco veces."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:306
 #, no-c-format
