program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -2027,7 +2027,7 @@ msgstr "&Caché"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2342
 #, no-c-format
 msgid "&Ignore playlists meant for menus"
-msgstr ""
+msgstr "&Ignorer les listes de lectures destinées aux menus"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
 #, no-c-format
@@ -7828,7 +7828,7 @@ msgstr "Pour les concaténer ou les ajouter en tant que parties supplémentaires
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:551
 #, no-c-format
 msgid "Ignores playlists which are likely meant for menus."
-msgstr ""
+msgstr "Ignore les listes de lectures qui sont très certainement utilisées pour les menus."
 
 #: src/output/p_textsubs.cpp:152
 #, no-c-format, c++-format
@@ -14109,7 +14109,7 @@ msgstr "Ceci est un nom arbitraire que l'interface peut utiliser pour faire réf
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:552
 #, no-c-format
 msgid "This is considered to be the case when a playlist contains the same item at least five times."
-msgstr ""
+msgstr "La liste de lecture doit contenir au moins cinq fois le même élément pour être ignorée."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:306
 #, no-c-format
