program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -2030,7 +2030,7 @@ msgstr "&Nascosto"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2342
 #, no-c-format
 msgid "&Ignore playlists meant for menus"
-msgstr ""
+msgstr "&Ignora playlist destinate ai menu"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
 #, no-c-format
@@ -7842,7 +7842,7 @@ msgstr "Se vuoi appenderli o aggiungerli come parti aggiuntive devi selezionare 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:551
 #, no-c-format
 msgid "Ignores playlists which are likely meant for menus."
-msgstr ""
+msgstr "Ignora playlist che probabilmente sono destinate ai menu."
 
 #: src/output/p_textsubs.cpp:152
 #, no-c-format, c++-format
@@ -14135,7 +14135,7 @@ msgstr "Questo è un nome arbitrario che la GUI può usare per questa particolar
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:552
 #, no-c-format
 msgid "This is considered to be the case when a playlist contains the same item at least five times."
-msgstr ""
+msgstr "Questo è considerato il caso quando una playlist contiene lo stesso elemento almeno cinque volte."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:306
 #, no-c-format
