program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -2007,7 +2007,7 @@ msgstr "&Gizlendi"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2342
 #, no-c-format
 msgid "&Ignore playlists meant for menus"
-msgstr ""
+msgstr "Menülere yönelik oynatma listelerini &yoksay"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
 #, no-c-format
@@ -4037,9 +4037,9 @@ msgid "Audio"
 msgstr "Ses"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:522
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Audio and subtitle files often contain the words 'cc' or 'sdh' in their file name to signal that they're intended for hearing impaired people."
-msgstr "Altyazı dosyalarının dosya adlarında, sadece 'zorunlu görüntüle'meyi amaçlayan işaretleme için genellikle 'forced' kelimesi bulunur (örn., 'Yüzüklerin Efendisi'nde Elfçe dilinde konuştuklarında)."
+msgstr "Ses ve altyazı dosyalarının, işitme engelli kişilere yönelik olduklarını belirtmek için dosya adlarında genellikle 'cc' veya 'sdh' kelimeleri bulunur."
 
 #: src/common/property_element.cpp:214
 #, no-c-format
@@ -5748,9 +5748,9 @@ msgid "Depending on this setting the language can also be derived from the file 
 msgstr "Bu ayara bağlı olarak dil aynı zamanda, kaynak dosyadaki dil 'belirsiz' ('und') ise dosya adından türetilebilir."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2300
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Derive \"&hearing impair\" flag for audio/subtitles from file names:"
-msgstr "Dosya adlarından altyazılar için \"zorunlu görüntüle\" iş&aretini türet:"
+msgstr "Dosya adlarından ses/altyazılar için \"&işitme engelliler\" işaretini türet:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2299
 #, no-c-format
@@ -7801,7 +7801,7 @@ msgstr "Eğer bunları ek parçalar olarak eklemek veya ilave etmek istiyorsanı
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:551
 #, no-c-format
 msgid "Ignores playlists which are likely meant for menus."
-msgstr ""
+msgstr "Menülere yönelik olması muhtemel çalma listelerini yoksayar."
 
 #: src/output/p_textsubs.cpp:152
 #, no-c-format, c++-format
@@ -11331,7 +11331,7 @@ msgstr "Hedef &dosya adını seçilen dosyanın adından ayarla"
 #: src/common/property_element.cpp:136
 #, no-c-format
 msgid "Set if that track (audio, video or subs) SHOULD be used if no language found matches the user preference."
-msgstr "Eğer, kullanıcı tercihiyle eşleşen dil bulunamadığında bu iz (ses, görüntü veya altyazılar) KULLANILMALIYSA ayarlayın."
+msgstr "Kullanıcı tercihiyle eşleşen bir dil bulunmaması durumunda o izin (ses, görüntü veya altyazılar) kullanılmasının GEREKLİ olup olmadığını ayarlayın."
 
 #: src/common/property_element.cpp:153
 #, no-c-format
@@ -12163,12 +12163,12 @@ msgstr "GKA bu dosyaları tarayabilir, bulunan her oynatma listesinin iz sayıla
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:531
 #, no-c-format
 msgid "The GUI can set the 'forced display' flag for such tracks if the file name matches this regular expression."
-msgstr "Dosya adı bu düzenli ifadeyle eşleşirse, GKA bu tür izler için 'zorunlu görüntüle' işaretini ayarlayabilir."
+msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için 'zorunlu görüntüle' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:523
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The GUI can set the 'hearing impaired' flag for such tracks if the file name matches this regular expression."
-msgstr "Dosya adı bu düzenli ifadeyle eşleşirse, GKA bu tür izler için 'zorunlu görüntüle' işaretini ayarlayabilir."
+msgstr "Dosya adı bu düzenli ifadeyle eşleşiyorsa, GKA bu tür izler için 'işitme engelliler' işaretini ayarlayabilir."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:949
 #: src/mkvtoolnix-gui/merge/tool.cpp:964
@@ -13802,9 +13802,9 @@ msgid "The value for deriving the 'forced display' flag for subtitles from file 
 msgstr "Dosya adlarından altyazılar için 'zorunlu görüntüle' işaretini türetme değeri geçerli bir düzenli ifade olmak zorundadır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1526
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The value for deriving the 'hearing impaired' flag from file names must be a valid regular expression."
-msgstr "Dosya adlarından altyazılar için 'zorunlu görüntüle' işaretini türetme değeri geçerli bir düzenli ifade olmak zorundadır."
+msgstr "Dosya adlarından 'işitme engelliler' işaretini türetme değeri geçerli bir düzenli ifade olmak zorundadır."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
@@ -14057,7 +14057,7 @@ msgstr "Bu, GKA'nün bu belirli yapılandırmayı işaret etmesi için kullanabi
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:552
 #, no-c-format
 msgid "This is considered to be the case when a playlist contains the same item at least five times."
-msgstr ""
+msgstr "Bir oynatma listesinin aynı öğeyi en az beş kez içermesi durumunda bu durum kabul edilir."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:306
 #, no-c-format
