--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (82.0-0~bunkus01) mantic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Tue, 02 Jan 2024 14:39:44 +0100
+
 mkvtoolnix (81.0-0~bunkus01) mantic; urgency=low
 
   * New version.
