add Belarusian translation for the programs

--- a/AUTHORS
+++ b/AUTHORS
@@ -248,6 +248,9 @@ Potato <sheppaul@naver.com>
 pp Carvalho <?>
     * Brazilian Portuguese translation
 
+prydespar <prydespar@gmail.com>
+    * Belarusian translation
+
 quietvoid <?>
     * Reading single-layer Dolby Vision from AV1 IVF & OBU streams
     * Reading single-layer Dolby Vision from HEVC/H.265 Annex B
