man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-01-02 14:39+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2023\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2024\n"
 "Language-Team: Catalan (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ca/)\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "82.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2024-01-02"
-msgstr ""
+msgstr "02/01/2024"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
