--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-01-02 14:39+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2023\n"
+"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2024\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -42,7 +42,7 @@ msgstr "82.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2024-01-02"
-msgstr ""
+msgstr "2024-01-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
