--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2024-01-02 14:39+0100\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2023\n"
+"Last-Translator: Andrei Stepanov, 2018-2024\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,7 @@ msgstr "82.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2024-01-02"
-msgstr ""
+msgstr "2024-01-02"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
